# LEDCubeBackend

./: LoggerConfig.yml  README.md  Todo.txt  meson.build
data/: HardwareSettings.yml  LoggerConfig.yml  LumaSettings.cfg  Todo.txt  UserSettings.yml
src/: ErrorConstructor.cpp  Logger.cpp  LoggerSettings.cpp  SocketComms.cpp  SocketHandler.cpp  SocketWrapper.cpp  UserSettings.cpp  YAMLConvertors.cpp  main.cpp  meson.build
src/MenuConstructors/: GroupConstructor.cpp  MenuConstructor.cpp  meson.build
src/MenuConstructors/include/: GroupConstructor.hpp  MenuConstructor.hpp
src/MenuConstructors/widgets/: ButtonWidget.cpp  DropdownWidget.cpp  ExpanderWidget.cpp  PropertyWidget.cpp  SliderWidget.cpp  SpinnerWidget.cpp  SwitchWidget.cpp  TextboxWidget.cpp  meson.build
src/MenuConstructors/widgets/include/: ButtonWidget.hpp  DropdownWidget.hpp  ExpanderWidget.hpp  PropertyWidget.hpp  SliderWidget.hpp  SpinnerWidget.hpp  SwitchWidget.hpp  TextboxWidget.hpp  WidgetTemplate.hpp  Widgets.hpp
src/include/: ErrorConstructor.hpp  GlobalEnums.hpp  LogAereas.hpp  Logger.hpp  SocketComms.hpp  SocketWrapper.hpp  UserSettings.hpp  communicationDefinitions.hpp
subprojects/LumaMenuC++/: LumaC++Wrapper.cpp  LumaMenuC++.cpp  meson.build
subprojects/LumaMenuC++/include/: LumaC++Wrapper.hpp  LumaMenuC++.hpp
